welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:4: error: type mismatch;
 found   : Int
 required: Boolean
  while(trouve == false && lookingFor && i<(nums.length-1))
                           ^